@@ -5,7 +5,10 @@ Documentation is available in the docstrings and
 online at https://readthedocs.org/projects/refnx/
 """
 
-from refnx.version import version as __version__
+try:
+    from refnx.version import version as __version__
+except ImportError:
+    __version__ = 'version string not created yet'
 
 from refnx._lib._testutils import PytestTester
 
